language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_module_doc_comment_to_regular_comment.snap
---
source: language-server/src/tests/action.rs
expression: "//// wobble\n\nimport wibble\n"
---
----- BEFORE ACTION
//// wobble
     ↑     

import wibble


----- AFTER ACTION
// wobble

import wibble
