language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_multiline_comment_with_doc_comment.snap
---
source: language-server/src/tests/action.rs
expression: "// wibble\n// wobble\n// wibble\nfn wibble() {\n    todo\n}"
---
----- BEFORE ACTION
// wibble
// wobble
   ↑     
// wibble
fn wibble() {
    todo
}


----- AFTER ACTION
/// wibble
/// wobble
/// wibble
fn wibble() {
    todo
}
